--- a/app/test/index.html
+++ b/app/test/index.html
@@ -27,7 +27,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         'my-greeting-basic.html',
         'my-greeting-basic.html?dom=shadow',
         'my-list-basic.html',
-        'my-list-basic.html?dom=shadow'
+        'my-list-basic.html?dom=shadow',
+        'my-converter.html'
       ]);
     </script>
 
