--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -51,26 +51,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       setFocus(app.route);
     });
 
-    page('/users', function() {
-      app.route = 'users';
-      setFocus(app.route);
-    });
-
-    page('/users/:name', function(data) {
-      app.route = 'user-info';
-      app.params = data.params;
-      setFocus(app.route);
-    });
-
-    page('/contact', function() {
-      app.route = 'contact';
-      setFocus(app.route);
-    });
     page('/base64', function() {
       app.route = 'base64';
     });
     page('/URLEncode', function() {
       app.route = 'URLEncode';
+    });
+    page('/gs1KeyCheckDigit', function() {
+      app.route = 'gs1KeyCheckDigit';
     });
 
     // 404
