--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -60,6 +60,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     page('/gs1KeyCheckDigit', function() {
       app.route = 'gs1KeyCheckDigit';
     });
+    page('/SHA1', function() {
+      app.route = 'SHA1';
+    });
 
     // 404
     page('*', function() {
